force-app/main/default/objects/IT_Asset_Forms__c/IT_Asset_Forms__c.object-meta.xml
<CustomObject>
    <label>IT Asset Forms</label>
    <nameField>
        <displayFormat>ASSETFORM-{00000}</displayFormat>
        <label>Asset Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT Asset Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>