force-app/main/default/objects/IT_Asset_Forms__c/fields/Extras__c.field-meta.xml
<CustomField>
    <fullName>Extras__c</fullName>
    <label>Extras</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monitor</fullName>
            </value>
            <value>
                <fullName>Laptop Stand</fullName>
            </value>
            <value>
                <fullName>Keyboard</fullName>
            </value>
            <value>
                <fullName>Mouse</fullName>
            </value>
            <value>
                <fullName>Stylus/Pen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>