force-app/main/default/objects/IT_Asset_Forms__c/fields/HelpText__c.field-meta.xml
<CustomField>
    <fullName>HelpText__c</fullName>
    <defaultValue>&quot;If you do not know your Service Tag Number, please input &apos;X1&apos;.&quot;</defaultValue>
    <label>HelpText</label>
    <type>TextArea</type>
</CustomField>