force-app/main/default/objects/IT_Asset_Forms__c/fields/iPhone_Model__c.field-meta.xml
<CustomField>
    <fullName>iPhone_Model__c</fullName>
    <label>iPhone Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>iPhone 6</fullName>
            </value>
            <value>
                <fullName>iPhone 6s</fullName>
            </value>
            <value>
                <fullName>iPhone 7</fullName>
            </value>
            <value>
                <fullName>iPhone SE</fullName>
            </value>
            <value>
                <fullName>iPhone 8</fullName>
            </value>
            <value>
                <fullName>iPhone 8 Plus</fullName>
            </value>
            <value>
                <fullName>Personal Phone</fullName>
            </value>
            <value>
                <fullName>iPhone 6 Plus</fullName>
            </value>
            <value>
                <fullName>iPhone 6s Plus</fullName>
            </value>
            <value>
                <fullName>iPhone 5</fullName>
                <isActive>false</isActive>
                <label>iPhone 5</label>
            </value>
            <value>
                <fullName>iPhone 5c</fullName>
                <isActive>false</isActive>
                <label>iPhone 5c</label>
            </value>
            <value>
                <fullName>iPhone 5s</fullName>
                <isActive>false</isActive>
                <label>iPhone 5s</label>
            </value>
            <value>
                <fullName>iPhone 7 Plus</fullName>
                <isActive>false</isActive>
                <label>iPhone 7 Plus</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>