force-app/main/default/objects/IT_Asset_Forms__c/fields/Laptop_Brand__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Brand__c</fullName>
    <label>Laptop Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
                <isActive>false</isActive>
                <label>Apple</label>
            </value>
            <value>
                <fullName>Asus</fullName>
                <isActive>false</isActive>
                <label>Asus</label>
            </value>
            <value>
                <fullName>Huwaei</fullName>
                <isActive>false</isActive>
                <label>Huwaei</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>