force-app/main/default/objects/IT_Asset_Forms__c/fields/Laptop_Service_Tag_Number__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Service_Tag_Number__c</fullName>
    <description>If you do not know your Service Tag Number, please input &apos;X1&apos;.</description>
    <inlineHelpText>If you do not know your Service Tag Number, please input &apos;X1&apos;.</inlineHelpText>
    <label>Service Tag/Serial Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>