force-app/main/default/objects/IT_Asset_Forms__c/fields/ListViewCheck__c.field-meta.xml
<CustomField>
    <fullName>ListViewCheck__c</fullName>
    <formula>IF(CreatedById = $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ListViewCheck</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>