force-app/main/default/objects/IT_Asset_Forms__c/fields/Monitor_Brand__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Brand__c</fullName>
    <label>Monitor Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Lenovo</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Acer</fullName>
                <isActive>false</isActive>
                <label>Acer</label>
            </value>
            <value>
                <fullName>Alienware</fullName>
                <isActive>false</isActive>
                <label>Alienware</label>
            </value>
            <value>
                <fullName>Apple</fullName>
                <isActive>false</isActive>
                <label>Apple</label>
            </value>
            <value>
                <fullName>Asus</fullName>
                <isActive>false</isActive>
                <label>Asus</label>
            </value>
            <value>
                <fullName>BenQ</fullName>
                <isActive>false</isActive>
                <label>BenQ</label>
            </value>
            <value>
                <fullName>LG</fullName>
                <isActive>false</isActive>
                <label>LG</label>
            </value>
            <value>
                <fullName>Samsung</fullName>
                <isActive>false</isActive>
                <label>Samsung</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>