force-app/main/default/objects/IT_Asset_Forms__c/fields/Monitor_Service_Tag_Number__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Service_Tag_Number__c</fullName>
    <label>Monitor Service Tag Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>