force-app/main/default/objects/IT_Asset_Forms__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bankstown</fullName>
            </value>
            <value>
                <fullName>Brendale</fullName>
            </value>
            <value>
                <fullName>Briar Hill</fullName>
            </value>
            <value>
                <fullName>Castle Hill</fullName>
            </value>
            <value>
                <fullName>Maroubra</fullName>
                <label>Eastern Sydney</label>
            </value>
            <value>
                <fullName>Gold Coast</fullName>
            </value>
            <value>
                <fullName>Moonee Ponds</fullName>
            </value>
            <value>
                <fullName>Mulgrave</fullName>
            </value>
            <value>
                <fullName>Penrith</fullName>
            </value>
            <value>
                <fullName>Perth</fullName>
            </value>
            <value>
                <fullName>Stones Corner</fullName>
            </value>
            <value>
                <fullName>Surrey Hills</fullName>
            </value>
            <value>
                <fullName>Wollongong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>