force-app/main/default/objects/IT_Asset_Forms__c/listViews/My_Forms.listView-meta.xml
<ListView>
    <fullName>My_Forms</fullName>
    <columns>NAME</columns>
    <columns>Office__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ListViewCheck__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Forms</label>
</ListView>